<resources>
    <string name="app_name">CollabDJ</string>

    <!-- Strings for MainActivity -->
    <string name="new_song">Create Song</string>
    <string name="new_song_description">Tap to start a new song</string>

    <string name="open_song">Open Song</string>
    <string name="open_song_desciption">Tap to open a song</string>

    <string name="join_session">Join Session</string>
    <string name="join_session_description">Tap to join a session</string>

    <string name="shared_songs">Shared Songs</string>
    <string name="shared_songs_description">Tap to enter shared songs</string>

    <!-- Strings for PlaySongActivity -->
    <string name="player_bg">GIF background of the player</string>
    <string name="player_status_playing">Playing:</string>
    <string name="player_status_loading">Loading:</string>

    <!-- Strings for RecyclerView items -->
    <string name="new_sample_title">Add sample</string>

    <!-- Strings for hamburger menu -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="share_option">Share</string>
    <string name="save_option">Save</string>

    <!-- Strings for dialogFragment AddSoundSample -->
    <string name="add_new_sample">Add sound sample</string>

    <!-- Strings for dialogFragment DiscoveringConnection -->
    <string name="looking_for_session_nearby">Looking for a session nearby &#8230;</string>
    <string name="session_found">Session found, connecting &#8230;</string>
    <string name="connection_established">Connection established!</string>

    <!-- Strings for save/share alertDialog -->
    <string name="add_new_title">Enter song name:</string>

    <!-- Strings for Snackbar -->
    <string name="snackbar_message">joined the session</string>
    <string name="snackbar_action">got it</string>
</resources>
