<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.collabdj.activities.MainActivity">

    <!-- An invisible view aligned to the horizontal center of the parent. Allows other
    views to be arranged on either side -->
    <!--<View
        android:id="@+id/centerShimHorizontal"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/rlNewSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivNewSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/newSongShim"
                android:layout_toStartOf="@+id/newSongShim"
                android:contentDescription="@string/new_song_description"
                app:srcCompat="@drawable/ic_new_song" />

            <View
                android:id="@+id/newSongShim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivNewSong"
                android:layout_alignTop="@+id/ivNewSong"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvNewSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/newSongShim"
                android:layout_toRightOf="@+id/newSongShim"
                android:text="@string/new_song"
                android:textAlignment="center" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlOpenSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivOpenSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/openSongShim"
                android:layout_toStartOf="@+id/openSongShim"
                android:contentDescription="@string/open_song_desciption"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_saved_songs" />

            <View
                android:id="@+id/openSongShim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivOpenSong"
                android:layout_alignTop="@+id/ivOpenSong"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvOpenSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/openSongShim"
                android:layout_toRightOf="@+id/openSongShim"
                android:text="@string/open_song"
                android:textAlignment="center" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlSharedSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivSharedSongs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/sharedSongsShim"
                android:layout_toStartOf="@+id/sharedSongsShim"
                android:contentDescription="@string/shared_songs_description"
                app:srcCompat="@drawable/ic_shared_songs" />

            <View
                android:id="@+id/sharedSongsShim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivSharedSongs"
                android:layout_alignTop="@+id/ivSharedSongs"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvSharedSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/sharedSongsShim"
                android:layout_toRightOf="@+id/sharedSongsShim"
                android:text="@string/shared_songs"
                android:textAlignment="center" />

        </RelativeLayout>

        <!--<RelativeLayout
            android:id="@+id/rlOpenSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivOpenSong"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/openSongShim"
                android:layout_toStartOf="@+id/openSongShim"
                android:contentDescription="@string/open_song_desciption"
                app:srcCompat="@drawable/ic_saved_songs" />

            <View
                android:id="@+id/openSongShim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivOpenSong"
                android:layout_alignTop="@+id/ivOpenSong"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvOpenSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/openSongShim"
                android:layout_toRightOf="@+id/openSongShim"
                android:text="@string/open_song"
                android:textAlignment="center" />

        </RelativeLayout>-->

        <!--<RelativeLayout
            android:id="@+id/rlSharedSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivSharedSongs"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/sharedSongsShim"
                android:layout_toStartOf="@+id/sharedSongsShim"
                android:contentDescription="@string/shared_songs_description"
                app:srcCompat="@drawable/ic_shared_songs" />

            <View
                android:id="@+id/sharedSongsShim"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ivSharedSongs"
                android:layout_alignTop="@+id/ivSharedSongs"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvSharedSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/sharedSongsShim"
                android:layout_toRightOf="@+id/sharedSongsShim"
                android:text="@string/shared_songs"
                android:textAlignment="center" />

        </RelativeLayout>-->

    </LinearLayout>

</RelativeLayout>

<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.collabdj.activities.MainActivity">-->

    <!-- An invisible view aligned to the horizontal center of the parent. Allows other
    views to be arranged on either side -->
    <!--<View
        android:id="@+id/centerShimHorizontal"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>-->

    <!-- An invisible view aligned to the vertical center of the parent. Allows other
    views to be arranged on either side -->
    <!--<View
        android:id="@+id/centerShimVertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_centerVertical="true"/>

    <RelativeLayout
        android:id="@+id/rlNewSong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:layout_toLeftOf="@id/centerShimHorizontal"
        android:layout_toStartOf="@id/centerShimHorizontal"
        android:layout_above="@id/centerShimVertical">


        <ImageView
            android:id="@+id/ivNewSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@+id/tvNewSong"
            android:contentDescription="@string/new_song_description"
            app:srcCompat="@drawable/placeholder_music" />

        <TextView
            android:id="@+id/tvNewSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/new_song"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlOpenSong"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:layout_toEndOf="@id/centerShimHorizontal"
        android:layout_toRightOf="@id/centerShimHorizontal"
        android:layout_above="@id/centerShimVertical">

        <ImageView
            android:id="@+id/ivOpenSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@+id/tvOpenSong"
            android:contentDescription="@string/open_song_desciption"
            app:srcCompat="@drawable/placeholder_music" />

        <TextView
            android:id="@+id/tvOpenSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/open_song"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlJoinSession"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:layout_toStartOf="@id/centerShimHorizontal"
        android:layout_toLeftOf="@id/centerShimHorizontal"
        android:layout_below="@id/centerShimVertical">

        <ImageView
            android:id="@+id/ivJoinSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@+id/tvJoinSession"
            android:contentDescription="@string/join_session_description"
            app:srcCompat="@drawable/placeholder_music" />

        <TextView
            android:id="@+id/tvJoinSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/join_session"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSharedSongs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:layout_toEndOf="@id/centerShimHorizontal"
        android:layout_toRightOf="@id/centerShimHorizontal"
        android:layout_below="@id/centerShimVertical">

        <ImageView
            android:id="@+id/ivSharedSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@+id/tvSharedSongs"
            android:contentDescription="@string/shared_songs_description"
            app:srcCompat="@drawable/placeholder_music" />

        <TextView
            android:id="@+id/tvSharedSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/shared_songs"/>

    </RelativeLayout>

</RelativeLayout>-->
